hphp/hack/test/typecheck/pipe_catch.php.exp
File "pipe_catch.php", line 11, characters 10-11:
Variable `$$` is undefined, or not always defined. (Naming[2050])
File "pipe_catch.php", line 10, characters 20-21:
Did you mean `$_` instead?
